--- a/index.html
+++ b/index.html
@@ -259,13 +259,13 @@
                     </div> 
 					
                     <div class="work__img">
-                        <img src="assets/img/work2.jpg" alt="">
+                        			<a href="https://github.com/kaiyoken3618/E_Commerce_Website"><img src="assets/img/work2.jpg" alt=""><figcaption>E-Commerce</figcaption></a>
                     </div>
                     <div class="work__img">
-                        <img src="assets/img/work3.jpg" alt="">
+                        			<a href="https://github.com/kaiyoken3618/WP_Blog"><img src="assets/img/work3.jpg" alt=""><figcaption>WP_Blog site</figcaption></a>
                     </div>
                     <div class="work__img">
-                        <img src="assets/img/work4.jpg" alt="">
+                        			<a href="https://github.com/kaiyoken3618/Enamul"><img src="assets/img/work4.jpg" alt=""><figcaption>Portfolio</figcaption></a>
                     </div>
                     <div class="work__img">
                         <img src="assets/img/work5.jpg" alt="">
