--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
                 <div class="work__container bd-grid">
                     <div class="work__img">
                          
-						<a href="https://github.com/kaiyoken3618/Image-Classification"><img src="assets/img/work1.jpeg" alt=""><figcaption>picture Classification</figcaption></a>
+						<a href="https://github.com/kaiyoken3618/Image-Classification"><img src="assets/img/work1.jpeg" alt=""><figcaption>Image Classification</figcaption></a>
                     </div> 
 					
                     <div class="work__img">
